# AI-Music-Type

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
features_extraction/: CMakeLists.txt
features_extraction/src/: main.cpp
learning/: main.py
lib/au-file-processing/: CMakeLists.txt
lib/au-file-processing/include/: AUFile.h
lib/au-file-processing/include/fourier_transforms/: fft.h
lib/au-file-processing/src/: AUFile.cpp
predicting/: CMakeLists.txt
predicting/src/: main.cpp
